Fix tests and subtle bug
Tests were failing windows drive letters (i.e. 'C:\path') weren't being
accounted for in some of our ModelDiscovery tests. This was fine when
`createSmithyJarManifestUrl` was interpreting its string parameter
literally, but converting to a Path will add the drive letter. So I had
to update the tests. It's a bit weird to make it work, but I think the
tests are important and I couldn't think of a better way.

However, this drew my attention to a bug/potential breaking change in my
original change to `createSmithyJarManifestUrl`. I was encoding
everything, which meant that anyone passing in an already-encoded string
would get back a double-encoded URL, which would _not_ resolve to the
correct location on the filesystem. I don't think trying to figure out
if the string is encoded or not is something we should be doing though,
so I opted to just keep the existing behavior when a "jar:file:/foo.jar"
or "file:/foo.jar" is passed in, and updated the javadoc.